[project]
name = "repossessed-assets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "marimo[recommended]>=0.17.7",
    "playwright>=1.55.0",
    "prefect>=3.5.0",
    "requests>=2.32.5",
]

[tool.marimo.runtime]
dotenv = [".env"]
