[project]
name = "repossessed-assets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "marimo[recommended]>=0.17.7",
    "playwright>=1.55.0",
    "prefect>=3.5.0",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "requests>=2.32.5",
    "websockets>=15.0.1",
]

[tool.marimo.runtime]
dotenv = [".env"]
